# filings-analyst-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: eval.yml  test.yml
eval_reports/: 2026-05-19_full_eval.md  2026-05-19_sample_eval.md  2026-05-20_post_fix_eval.md  README.md
scripts/: run_sample_eval.py
src/filings_analyst/: __init__.py  chunking.py  cli.py  config.py  edgar.py  embeddings.py  mcp_server.py  providers.py  rag.py  sections.py  vectorstore.py
src/filings_analyst/eval/: __init__.py  golden_set.yaml  metrics.py  report.py  runner.py
tests/: test_chunking.py  test_edgar.py  test_embeddings.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_mcp_server.py  test_providers.py  test_rag.py  test_sections.py  test_vectorstore.py
tests/fixtures/: sample_10k.html
